Adds reading notes of columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -14,6 +14,27 @@
 # 个人篇
 
 
+## 2017-06-15  开会，是一个用时间换结论的商业模式
+开会，是一个用时间，换结论的商业模式。
+开会的第一个结论价值，是共识。
+开会的第二个结论价值，是共创。
+
+
+## 2017-06-11  我有一个好消息，一个坏消息，你先听哪一个？
+“近因效应”吗？最后的印象最强烈，甚至能冲淡之前的各种印象。把好消息放在后面说，会因为“近因效应”的放大效果，对冲掉一部分前面天生强烈的坏消息。这样你的感觉，就不会那么差了
+沟通，又是一门有关心理的学问。今天我们说了基于“损失厌恶”和“近因效应”这些“个体沟通心理”，一个有趣的沟通策略：“快乐痛苦四原则”。
+简单来说就是：好消息要分开说，坏消息要一起说，小好大坏分开说，大好小坏一起说。
+
+
+## 2017-06-09  在未来，哪些职场能力是必需的？
+性格是“DNA和后天环境综合形成的一种稳定的心理特征”，没什么大事不会改变。
+
+未来职场，每个人都会变成一个“网络原点”，这时只有3种能力是重要的：
+产品能力：理解需求，整合信息、解决某类型问题、思考、阅读、写作、产品化、共情、设计……；
+传播能力：链接人脉、传播讯息，写作、表达、演讲、故事化……；
+运营能力：自我管理和领导能力，高效能、时间管理、精力管理、自我驱动……；
+
+
 ## 2017-06-02  你的情感账户余额不足，请充值
 什么是情感账户？情感账户，是人际关系的一种比喻，这个账户里存的是信任，价值，情感。
 情商中所谓的“人际关系处理”，本质上就是在情感账户里存款和取款的行为。
