--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,18 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-06-15  做事前不要过分算概率
+尼克松最爱引用西奥多∙罗斯福（美国第26任总统）的一句话，“荣誉属于真正置身于竞技场上的人”。一个不在竞技场上的人，是不可能遇到奇迹的。
+我非常认同这样一个观点，人太精明了，就不聪明了。
+世界上什么事情做到最好的前 5% 的人，都是兴趣使然，因为他们做事的时候能够不在乎失败，即使是很小的成功概率，也会去追求。做到前20%－前5%的人，常常是利益驱动，因为他们会知难而退，虽然能把握住很多稳妥的机会，但是那些机会的回报未必高。
+
+
+## 2017-06-14  AlphaGo 的关键方法 - 强化学习
+机器学习，实际上是寻找一种数学模型，让这种模型符合它所要描述的对象。比如说我们要寻找一种描述天体运动的模型，让它符合太阳系行星的运动情况，今天这个模型就是开普勒－牛顿的椭圆形模型：太阳系中所有的行星和彗星围绕着太阳系的重心（和太阳的位置很接近但是有所差别），做椭圆运动。当然，这个模型内不同物体的运动速度和周期不同，这些数据被称为模型的参数。
+
+AlphaGo 就采用了一个新的学习方法，就是所谓的“强化学习”( Reinforcement Learning)。它的方法其实也很简单，就是计算机在没有人为给定方向的条件下，自己试着走一个方向，然后人告诉它好不好，也就是说有一个反馈信息。
+
+
 ## 2017-06-09  怎样看待富人的财富 —— 聊聊社会的公平性
 维护社会的公平性，关键在于给人平等的机会，而不是同样的收入。怎样给人平等的机会呢？这个问题非常复杂，但是有一件事必须做，就是限制超级权力。
 
