--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,23 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-06-13  谈资比名牌包贵的社会
+考大学需要花费很多很多精力和时间，这也是一种“贵”。大学如果市场化，直接收很高的学费，也能把一些人排除在外，那也是一种“贵”。而一个合格的经济学家，必须能区分这两种“贵”的不同 —— 前者更公平，后者是特权。
+
+
+## 2017-06-10  对“中庸”的一点浅见
+“天命之谓性，率性之谓道，修道之谓教”，我可以这么解释 —— 
+人的本性有各种欲望，有同情心正义感也有自私自利，有食欲还喜欢异性，这些都是天生就有的，本性，无所谓好坏；
+但是人不能由着性子来，其实每时每刻，对每一件事，我们都有多个本性在争相发言，大脑里是一场争论。比如看见好吃的，一方面自己想吃，一方面也想到还有别人更需要吃这个东西，于心不忍。那这么多本性同时起作用，到底让谁做主呢？这个对本性的控制和选择，就是“道”；
+学习“道”，实践“道”，这就是教育。
+
+
+## 2017-06-08  企业家精神和包办婚姻
+不坚持就干不成大事，不尝试就找不到“对”的事。
+这个美国青年的故事不是特例。凯文·凯利年轻的时候像个苦行僧，又像个乞丐一样游历了世界。乔布斯曾经只身去遥远的印度学习佛法。这样的“尝试”，你敢干吗？
+所以人生还是矛盾。尝试和坚持是矛盾，故事和现实是矛盾，风险和稳定是矛盾。
+
+
 ## 2017-06-07  坚持坚持再坚持
 长期的坚持不是来自体能和意志力，而是来自乐观的精神，来自我们给自己讲的故事。故事都是虚构的，但是故事提供了工作和人生的意义。
 
