--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,13 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-06-12  投资的世界到底长什么样？
+学习与生活中，可能身处“左侧”（更多依赖技能的那一侧），在投资中，却身处“右侧”（更多依赖运气的那一侧）。
+在投资的世界里，赚钱不靠努力的，“什么都不做”不仅是最重要的事情，还是最难做到的事情呢！
+有勇气来改变可以改变的事情，有胸怀来接受不可改变的事情，有智慧能够来分辨两者的不同。
+把努力能够获得回报的事情交给自己，把需要依靠运气的部分交给时间。
+
+
 ## 2017-06-05  投资世界里的最基本技能 —— 趋势判断
 在交易市场里，有一种人被称作“韭菜”，为什么呢？因为韭菜总是割掉一茬再长一茬……而那些“韭菜”就是注定会被收割的人。如何判断自己是不是“韭菜”呢？其实很简单的，只要你身处交易市场之中的时候，脑子里存在以下的闪念中的任何一个，你就是“韭菜” —— 确定无疑的“韭菜”：
 
