Adds reading notes of ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -79,3 +79,12 @@ Losers have goals. Winners have systems.
 blogging was a system, not a goal.
 
 I'm thinking of these ideas and they're flowing through my head, I'm monitoring my body; I'm not monitoring my mind. And when my body changes, I have something that other people are going to care about, too.
+
+## The Law of Category
+If you cannot be first in a category, set up a new category you can be first in.
+Everyone is interested in what's new. Few people are interested in what's better.
+When you're the first in a new category, promote the category.
+
+## Chase Jarvis
+Amplify your strengths rather than fix your weaknesses.
+Good content is the best SEO.
