Adds poems of Tang.

--- a/note/...book_唐诗.md
+++ b/note/...book_唐诗.md
@@ -7,25 +7,32 @@
 ## 杜甫
 今夜鄜州月，闺中只独看。遥怜小儿女，未解忆长安。
 香雾云鬟湿，清辉玉臂寒。何时倚虚幌，双照泪痕干。
-    -- 《杜甫》
+    --《杜甫》
 
 
 ## 李白
 凤凰台上凤凰游，凤去台空江自流。吴宫花草埋幽径，晋代衣冠成古丘。
 三山半落清天外，二水中分白鹭洲。总为浮云能蔽日，长安不见使人愁。
-    -- 《登金陵凤凰台》
+    --《登金陵凤凰台》
+
+雁引愁心去，山衔好月来。
+    --《与夏十二登岳阳楼》
 
 
 ## 白居易
 孤山寺北贾亭西，水面初平云脚低。几处早莺争暖树，谁家新燕啄信泥。
 乱花渐欲迷人眼，浅草才能没马蹄。最爱湖东行不足，绿杨阴里白沙堤。
-    -- 《湖上春行》
+    --《湖上春行》
 
 乱花渐欲迷人眼，浅草才能没马蹄。               
     --《钱塘湖春行》
 
 
 ## 李商隐
+十岁裁诗走马成，冷灰残烛动离情。
+桐花万里丹山路，雏凤清于老凤声。
+    --《韩冬郎即席为诗相送》
+
 洞庭波冷晓侵云，日日征帆送远人。
 几度木兰舟上望，不知元是此花身。
     --《木兰花》
@@ -53,9 +60,12 @@
 
 
 ## 其他
+抛掷南阳为主忧，北征东讨尽良筹。时来天地皆同力，运去英雄不自由。
+千里山河轻孺子，两朝冠剑恨谯周。唯馀岩下多情水，犹解年年傍驿流。
+    -- 罗隐《筹笔驿》
+
 岭外音书断，经冬复历春。近乡情更怯，不敢问来人。
     -- 宋之问《渡汉江》
-
 
 洞房昨夜停红烛，待晓堂前拜舅姑。妆罢低声问夫婿，画眉深浅入时无。
     -- 朱庆馀《闺意》
