Adds reading notes of BoM.

--- a/note/...book_数学之美.md
+++ b/note/...book_数学之美.md
@@ -82,16 +82,44 @@ N 元模型的时间和空间复杂度都是 N 的指数函数，底数是词典
 
 
 ## 第 8 章  简单之美 —— 布尔代数和搜索引擎
+> 搜索引擎的索引原理
+
 搜索产品都是提炼成下载、索引和排序这三种基本服务，这就是搜索的“道”。
 搜索引擎的索引就变成了一张大表：表的每一行对应一个关键词，而每一个关键词后面跟着一组数字，是包含该关键词的文献序号。
 
 
 ## 第 9 章  图论和网络爬虫
+> 爬虫背后的数学原理 —— 图论
+
 欧拉定理：如果一个图能够从一个顶点出发，每条边不重复地遍历一遍回到这个顶点，那么每一顶点的度必须为偶数。
 度：对于图中的每一个顶点，将与之相连的边的数量定义为它的度。
 
 
 ## 第 10 章  PageRank —— Google 的民主表决式网页排名技术
+> PageRank 决定网页质量排名
+
 如果一个网页被很多其他网页所链接，说明它受到普遍的承认和信赖，那么它的排名就高，这就是 PageRank 的核心思想。
 对来自不同网页的链接区别对待，因为那些排名高的网页链接更可靠，于是要给这些链接比较大的权重。
 现在麻烦来了，计算搜索结果的网页排名过程中需要用到网页本身的排名，这不成了“先有鸡还是先有蛋”的问题了吗？
+
+
+## 第 11 章  如何确定网页和查询的相关性
+> TF-IDF 决定网页与查询的相关性
+
+TF：Term Frequency 单文本词频
+IDF：Inverse Document Frequency 逆文本频率指数，公式是 log(D/Dw)，其中 D 是全部网页数，Dw 是关键词在 Dw 个网页中出现的次数。
+
+Query：原子能的应用，网页有 1000 词，其中 “原子能”、“的”、“应用” 各出现 2 次，35 次和 5 次，那么 TF 分别是 0.002、0.035、0.005。
+其中 “的” 这种词没什么用，称为 “停止词（Stop Word）”，汉语中，停止词还有 “是”、“和”、“中”、“地”、“得” 等几十个。
+一个词预测主题的能力越强，权重越大，而停止词的权重为 0。
+很容易发现，如果一个关键词只在很少的网页中出现，通过它就很容易锁定搜索目标，它的权重也就应该越大。反之，如果一个词在大量网页中出现，看到它仍然不很清楚要找什么内容，它的权重就应该小。
+
+权重就是 IDF，那么网页相关性就是：R = TF1·IDF1 + TF2·IDF2 + ··· + TFn·IDFn。
+那么给定一个查询，有关网页的综合排名大致由相关性 R 和网页质量排名 PageRank 的乘积决定。
+
+
+## 第 12 章  有限状态机和动态规划
+有限状态机：地址识别
+动态规划：地图应用，最短路径
+二者结合：语音识别与自然语言理解，加权的有限状态机
+> 描述一句话的语音识别结果，就是通过在一张由词构成的概率路径图上找出概率最大的那条路径。
