Adds one Tang poem.

--- a/note/...book_唐诗.md
+++ b/note/...book_唐诗.md
@@ -60,6 +60,12 @@
 
 
 ## 其他
+黑云压城城欲摧，甲光向日金鳞开。
+角声满天秋色里，塞上燕脂凝夜紫。
+半卷红旗临易水，霜重鼓寒声不起。
+报君黄金台上意，提携玉龙为君死。
+    -- 李贺《雁门太守行》
+
 抛掷南阳为主忧，北征东讨尽良筹。时来天地皆同力，运去英雄不自由。
 千里山河轻孺子，两朝冠剑恨谯周。唯馀岩下多情水，犹解年年傍驿流。
     -- 罗隐《筹笔驿》
