--- a/note/...book_唐诗.md
+++ b/note/...book_唐诗.md
@@ -60,6 +60,12 @@
 
 
 ## 其他
+光阴难驻迹如客，寒暑不惊心似僧。
+    -- 许浑《南庭夜坐贻开元禅定二道者》
+
+露堕佳花棋局湿，风吹荷叶酒瓶香。
+    -- 许浑《韶州驿楼宴罢》
+
 黑云压城城欲摧，甲光向日金鳞开。
 角声满天秋色里，塞上燕脂凝夜紫。
 半卷红旗临易水，霜重鼓寒声不起。
