Adds reading notes of ToT

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -88,3 +88,6 @@ When you're the first in a new category, promote the category.
 ## Chase Jarvis
 Amplify your strengths rather than fix your weaknesses.
 Good content is the best SEO.
+
+## 1,000 True Fans —— Revisted
+A true fan is defined as "a fan who will buy anything you produce."
