Adds reading notes of columns.

--- a/note/...book_唐诗.md
+++ b/note/...book_唐诗.md
@@ -18,6 +18,11 @@
 雁引愁心去，山衔好月来。
     --《与夏十二登岳阳楼》
 
+夫天地者万物之逆旅也，光阴者百代之过客也。而浮生若梦，为欢几何？古人秉烛夜游，良有以也。
+况阳春召我以烟景，大块假我以文章。会桃花之芳园，序天伦之乐事。群季俊秀，皆为惠连；吾人咏歌，独惭康乐。
+幽赏未已，高谈转清。开琼筵以坐花，飞羽觞而醉月。不有佳咏，何伸雅怀？如诗不成，罚依金谷酒数。
+    -- 《春夜宴从弟桃花园序》
+
 
 ## 白居易
 孤山寺北贾亭西，水面初平云脚低。几处早莺争暖树，谁家新燕啄信泥。
@@ -60,6 +65,9 @@
 
 
 ## 其他
+曾经沧海难为水，除却巫山不是云，取次花丛懒回顾，半缘修道半缘君
+    -- 元稹《离思》
+
 光阴难驻迹如客，寒暑不惊心似僧。
     -- 许浑《南庭夜坐贻开元禅定二道者》
 
