--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -14,6 +14,17 @@
 # 个人篇
 
 
+## 2017-06-26  藏在 “威胁、此刻、重要” 后的大猩猩
+概念：领导力：专
+专注，是一种通过放弃关注大部分的事，只“选择性注意”少部分的事，从而提高其成功率的能力，它被很多人认为是领导力的重要组成部分。
+
+
+## 2017-06-18  灵感，其实就在你的盒子里
+到底什么叫系统创新思维？很多人一提起创新，就想到“Out-of-Box Thinking”：跳出框架的思考。
+“系统创新思维”认为，创新其实恰恰源于对思想的制约，而非放任。
+限定一个框架，然后在框架内寻找答案，远比漫无目的的发散思维，或静候灵感降临更有效。
+
+
 ## 2017-06-15  开会，是一个用时间换结论的商业模式
 开会，是一个用时间，换结论的商业模式。
 开会的第一个结论价值，是共识。
