--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,10 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-06-24  团结分裂的强力胶
+改变，要有改变的心、改变的勇气、改变的毅力，还有改变的方法。
+
+
 ## 2017-05-26  吉尼斯献血爷爷
 不要害怕伟大，有些人生来伟大，有些人成就伟大，还有些人不得不伟大！
 莎士比亚这段名言，正是献血爷爷哈里森的最佳写照。
