--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,16 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-06-21  什么是好老板
+作为人事主管，关键是要能识人，用人，为专业人员做好后勤，在必要的时候保驾护航。
+作为业务主管，需要是一个全能型选手，在工作中了解每一个细节，并且起到表率作用。
+
+
+
+## 2017-06-18  我给中学生的书单
+简∙奥斯丁甚至莎士比亚的书在他们的年代都是通俗读物。当通俗小说流传下来了，几百年后如果还有人读，就是经典。
+
+
 ## 2017-06-15  做事前不要过分算概率
 尼克松最爱引用西奥多∙罗斯福（美国第26任总统）的一句话，“荣誉属于真正置身于竞技场上的人”。一个不在竞技场上的人，是不可能遇到奇迹的。
 我非常认同这样一个观点，人太精明了，就不聪明了。
