--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,26 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-06-22  经验 = 对小概率意外的熟悉程度
+你用20%的时间就能应对80%的情况，但是应对剩下的20%意外突发情况，你需要用80%的时间去学习。这就是“经验”的价值。 
+
+
+## 2017-06-17  全美国最好的 20 所大学，一共有...20 所
+基本上，智商就好像身高一样。是个很难改变的硬指标，而且从事某些事情需要满足一定的门槛。
+就好像身高不够的人不能打职业篮球一样，智商不够很难干……比如说数学家，或者其他特别需要智商的工作。
+
+
+## 2017-06-16  蜘蛛侠套装
+人到底想要什么呢？有研究者专门访问了一些在某一方面特别成功的人，问他们你们是否感到自己的生活在某一方面有缺陷，是你后悔没有做好的。研究者把他们说的总结下来，发现有四个方面，是所有这些成功者都想要、但是感到在某一方面有所欠缺的。我们大概可以认为，这就是成功人生的四个维度 —— 
+
+  - 幸福（happiness）：这里说的幸福就是生活中的乐趣和满足，幸福 = 享受；
+  - 成就（achievement）：跟那些有相同奋斗目标的人相比，你取得了什么了不起的成就，成就 = 取胜；
+  - 意义（significance）：你对你关心的那些人，有没有一个正面的影响，意义 = 可依靠；
+  - 遗产（legacy）：你走了，你的价值观和成就，能不能给别人未来的成功铺平道路，遗产 = 延伸。
+
+我们喜欢“有选择”，但是我们不喜欢“做选择”。有选择就还有可能性，一旦做了选择就失去了可能性。
+
+
 ## 2017-06-13  谈资比名牌包贵的社会
 考大学需要花费很多很多精力和时间，这也是一种“贵”。大学如果市场化，直接收很高的学费，也能把一些人排除在外，那也是一种“贵”。而一个合格的经济学家，必须能区分这两种“贵”的不同 —— 前者更公平，后者是特权。
 
