--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-06-19  做个精明的时间买卖人
+我们不仅要理解别人，还要理解整个主要由别人构成的世界。不仅要理解它，还要与它融洽地相处，跟它做朋友，跟它共同成长……
+对于一艘没有目标的船来说，任何风都是逆风。
+
+
 ## 2017-06-12  投资的世界到底长什么样？
 学习与生活中，可能身处“左侧”（更多依赖技能的那一侧），在投资中，却身处“右侧”（更多依赖运气的那一侧）。
 在投资的世界里，赚钱不靠努力的，“什么都不做”不仅是最重要的事情，还是最难做到的事情呢！
