Adds reading notes of columns.

--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,10 +5,14 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-06-26  过度解读：英国靠老处女称霸世界
+那么什么是好的思维方式，什么是有问题的呢？虽然在不同事情上思维方式的好坏可能标准不一，难以用几句话简单讲清楚，但是好的思维方式都有一个共同点，就是“以正合，以奇胜”。
+这句话出自《孙子兵法》，它的意思是排兵要以堂堂正正之师正规地交战，最后靠多余的军队取胜。这里面“奇”字读jī 不读qí，意思是“多余的”，在军队里，可以理解成预备队。以奇胜，并非出奇制胜的意思，而是说最后以机动兵力获胜。唐朝名将李靖在《唐太宗李靖问对》里对这两句话含义有比较好的诠释。
+
+
 ## 2017-06-21  什么是好老板
 作为人事主管，关键是要能识人，用人，为专业人员做好后勤，在必要的时候保驾护航。
 作为业务主管，需要是一个全能型选手，在工作中了解每一个细节，并且起到表率作用。
-
 
 
 ## 2017-06-18  我给中学生的书单
