--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,8 +5,23 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-06-26  宇宙的视角
+这是一张著名的照片。1990年，旅行者1号探测器即将飞出太阳系的时候，在距离地球60亿公里的地方，美国国家航空航天局命令它回头再看一眼，拍摄了60张照片。照片上的光带是相机镜头反射的太阳光。其中的这一张上正好包括了地球 —— 就是图中那个亮点。
+
+泰森的老师，天体物理学家、也是著名的科学作家卡尔·萨根，看了这张照片非常感慨，他在1996年的一个颁发学位典礼上就此说过一段非常著名的话。咱们就把这段话作为这个系列的结尾吧 ——  
+我们成功地（从外太空）拍到这张照片，细心再看，你会看见一个小点。就是这里，就是我们的家，就是我们。在这个小点上，每个你爱的人、每个你认识的人、每个你曾经听过的人，以及每个曾经存在的人，都在那里过完一生。这里集合了一切的欢喜与苦难，数千个自信的宗教、意识形态以及经济学说，每个猎人和搜寻者、每个英雄和懦夫、每个文明的创造者与毁灭者、每个国王与农夫、每对相恋中的年轻爱侣、每个充满希望的孩子、每对父母、发明家和探险家，每个教授道德的老师、每个贪污的政客、每个超级巨星、每个至高无上的领袖、每个人类历史上的圣人与罪人，都住在这里 —— 一粒悬浮在阳光下的微尘。
+
+
+## 2017-06-25  精英的智慧
+研究者特别从三个方面考察一个人的智慧水平：
+
+  - 智识上的谦逊 —— 我知道我需要更多的信息，才能合理评估这件事，我知道未来可能还有不确定性；
+  - 超越自我 —— 我知道我身在这个事情之中可能会当局者迷，如果能从旁观者的视角看问题，也许更好；
+  - 考虑他人观点，达成妥协 —— 我知道不同观点的利弊，能理解这个事件的参与各方的想法和立场， 我不仅仅考虑自己的利益，也考虑跟别人的关系。
+
+
 ## 2017-06-22  经验 = 对小概率意外的熟悉程度
-你用20%的时间就能应对80%的情况，但是应对剩下的20%意外突发情况，你需要用80%的时间去学习。这就是“经验”的价值。 
+你用20%的时间就能应对80%的情况，但是应对剩下的20%意外突发情况，你需要用80%的时间去学习。这就是“经验”的价值。
 
 
 ## 2017-06-17  全美国最好的 20 所大学，一共有...20 所
