--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,13 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-06-26  你配得上最好的个人商业模式
+能被批量销售出去的时间更值得买 —— 因为它们实际上无比的廉价。
+
+你学会了开车，就进化成了腿更长的物种；你学会了外语，你就进化成了视野更广的物种；你学会了演讲，你就进化成了嗓门更大的物种；你学会了写作，你就进化成了声音更有穿透力的物种；你掌握了统计概率理论，你就进化成了更能看清本质的物种；你习得了统筹方法，你就进化成了“三头六臂”的物种，就能比别人多做很多事情；你深入研究心理学，你就进化成了更准确地理解整个世界的物种；你透彻悟透了现代金融理论，你就进化成了当前这个金融时代里最受恩宠的物种……
+
+
+
 ## 2017-06-19  做个精明的时间买卖人
 我们不仅要理解别人，还要理解整个主要由别人构成的世界。不仅要理解它，还要与它融洽地相处，跟它做朋友，跟它共同成长……
 对于一艘没有目标的船来说，任何风都是逆风。
