Adds reading notes of columns.

--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-06-28  通往超人之路
+然后你还可以从脑波角度分析。我们大脑理性思维和保持机警的时候，会发出所谓“β波”，但是在出神状态中，β波会减弱。
+另外两种脑波，α波和θ波会加强。其中α波是人做白日梦的时候发出的一种波，θ波是人深入思考的时候发出的。伴随着这两个脑波，人的紧张程度会下降，愉悦感会上升。
+
+
 ## 2017-06-26  宇宙的视角
 这是一张著名的照片。1990年，旅行者1号探测器即将飞出太阳系的时候，在距离地球60亿公里的地方，美国国家航空航天局命令它回头再看一眼，拍摄了60张照片。照片上的光带是相机镜头反射的太阳光。其中的这一张上正好包括了地球 —— 就是图中那个亮点。
 
