--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,11 +5,17 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-03  人生的终极问题到底是什么？
+买到可维持长期成长率的可增值资产之后，一直握着 —— 不动最重要。
+在“教育”或者“学习”这件事儿里，什么最重要？最终，环境比老师重要，你自己比环境还重要
+
+
 ## 2017-06-26  你配得上最好的个人商业模式
 能被批量销售出去的时间更值得买 —— 因为它们实际上无比的廉价。
 
 你学会了开车，就进化成了腿更长的物种；你学会了外语，你就进化成了视野更广的物种；你学会了演讲，你就进化成了嗓门更大的物种；你学会了写作，你就进化成了声音更有穿透力的物种；你掌握了统计概率理论，你就进化成了更能看清本质的物种；你习得了统筹方法，你就进化成了“三头六臂”的物种，就能比别人多做很多事情；你深入研究心理学，你就进化成了更准确地理解整个世界的物种；你透彻悟透了现代金融理论，你就进化成了当前这个金融时代里最受恩宠的物种……
 
+人人都应该尝试投资，不发财没关系，至少能够检验你的“视力”，锻炼你的心智。要知道短期市场都是被情绪所操控的，不论你的投资品类多好，也可能因为一些莫名其妙的原因下跌。别相信那些依靠小道消息，或者分析图形的人所说的明天的市场走势。
 
 
 ## 2017-06-19  做个精明的时间买卖人
