--- a/note/...book_唐诗.md
+++ b/note/...book_唐诗.md
@@ -29,9 +29,6 @@
 乱花渐欲迷人眼，浅草才能没马蹄。最爱湖东行不足，绿杨阴里白沙堤。
     --《湖上春行》
 
-乱花渐欲迷人眼，浅草才能没马蹄。               
-    --《钱塘湖春行》
-
 
 ## 李商隐
 十岁裁诗走马成，冷灰残烛动离情。
@@ -64,15 +61,23 @@
     --《出塞》二首
 
 
+## 许浑
+光阴难驻迹如客，寒暑不惊心似僧。
+    -- 《南庭夜坐贻开元禅定二道者》
+
+露堕佳花棋局湿，风吹荷叶酒瓶香。
+    -- 《韶州驿楼宴罢》
+
+溪云初起日沉阁，山雨欲来风满楼。
+    -- 《咸阳城西门晚眺》
+
+荣枯尽寄浮云外，哀乐犹惊逝水前。日暮长堤更回首，一声蝉续一声蝉。
+    -- 《重游练湖怀旧》
+
+
 ## 其他
 曾经沧海难为水，除却巫山不是云，取次花丛懒回顾，半缘修道半缘君
     -- 元稹《离思》
-
-光阴难驻迹如客，寒暑不惊心似僧。
-    -- 许浑《南庭夜坐贻开元禅定二道者》
-
-露堕佳花棋局湿，风吹荷叶酒瓶香。
-    -- 许浑《韶州驿楼宴罢》
 
 黑云压城城欲摧，甲光向日金鳞开。
 角声满天秋色里，塞上燕脂凝夜紫。
