Adds reading notes of ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -91,3 +91,6 @@ Good content is the best SEO.
 
 ## 1,000 True Fans —— Revisted
 A true fan is defined as "a fan who will buy anything you produce."
+
+## Daymond John
+"Money is a great servant but a horrible master."
