Adds reading notes of columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,21 @@
 3、个人，我们与自己的关系；
 4、工具，提升前三者的效率。
 
+--------------------------------------------------------------------------------
+
+
+# 工具篇
+
+
+## 2017-07-04  一家小龙虾餐厅面对的五种竞争作用力
+概念：波特五力模型
+1979年，年仅32岁的迈克尔·波特提出，每家企业都受“直接竞争对手、顾客、供应商、潜在新进公司和替代性产品”这五个“竞争作用力”的影响。
+
+
+## 2017-07-03  透过结构看世界
+概念：MECE法则
+MECE法则，是麦肯锡咨询顾问芭芭拉·明托在《金字塔原理》中提出的一个思考工具，它是 Mutually Exclusive Collectively Exhaustive 的缩写，意思是“相互独立，完全穷尽”，也常被称为“不重叠，不遗漏”。
+
 
 --------------------------------------------------------------------------------
 
@@ -678,6 +693,7 @@ We hire for attitude, and train for skill.
 员工会拿自己的薪水和三个东西作比较：内部的其他同事，外部的市场行情，和自己的努力应得。如果有一个不公平，员工就会产生巨大的负面情绪。
 当管理者发现，自己在激励上，只有制定规则的责任，没有分配奖励的权力时，就离公平不远了。
 要保证个人公平，最重要的是规则清晰，赏罚分明，把自己的权力，锁在笼子里。
+
 
 ## 2017-01-05  左手激励，右手压力
 X-Y理论：
