--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,10 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-05  满足感管理
+多巴胺是大脑对你这个行为的奖励！感受到多巴胺，你就会感觉特别兴奋、刺激和愉悦。大脑是用多巴胺告诉你，下次还要做这样的事。
+
+
 ## 2017-06-28  通往超人之路
 然后你还可以从脑波角度分析。我们大脑理性思维和保持机警的时候，会发出所谓“β波”，但是在出神状态中，β波会减弱。
 另外两种脑波，α波和θ波会加强。其中α波是人做白日梦的时候发出的一种波，θ波是人深入思考的时候发出的。伴随着这两个脑波，人的紧张程度会下降，愉悦感会上升。
