--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -9,6 +9,12 @@
 买到可维持长期成长率的可增值资产之后，一直握着 —— 不动最重要。
 在“教育”或者“学习”这件事儿里，什么最重要？最终，环境比老师重要，你自己比环境还重要
 
+在这种情况下， 一切的讨论都是无意义的 ，因为人们在讨论中所传递交换的，百分之九十九都不是 __事实__ ，几乎百分之百都是 __看法__ ...
+人们的看法有什么意义呢？在投资领域里，一点意义都没有，即便有，也是负面意义：
+这世界上的绝大多数人在投资上都是失败的，你若是愿意跟他们交换看法和意见，只能说明你也是其中之一。
+
+如果你买入了你自己并不懂的东西，它跌了你会害怕，它涨了你还会害怕。
+
 
 ## 2017-06-26  你配得上最好的个人商业模式
 能被批量销售出去的时间更值得买 —— 因为它们实际上无比的廉价。
