Adds reading notes for book of ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -94,3 +94,13 @@ A true fan is defined as "a fan who will buy anything you produce."
 
 ## Daymond John
 "Money is a great servant but a horrible master."
+
+## The Canvas Strategy
+The person who clears the path ultimately controls its direction, just as the canvas shapes the painting.
+If you want great mentors, you have to become a great mentee. If you want to lead, you have to first learn to follow.
+
+Great men have almost always shown themselves as ready to obey as they afterwards proved able to command.
+    -- Lord Mahon
+
+## Gut Investing
+In the early stage, at the seed of an idea, the bet is largely based on the quality of the team, and the emotional connection you fell with the product.
