Adds reading notes for book - ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -104,3 +104,7 @@ Great men have almost always shown themselves as ready to obey as they afterward
 
 ## Gut Investing
 In the early stage, at the seed of an idea, the bet is largely based on the quality of the team, and the emotional connection you fell with the product.
+
+## Mike Shinoda
+It is far better for a man to go wrong in freedom than to go right in chains.
+    -- Thomas Huxley
