Adds reading notes of columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -13,14 +13,54 @@
 # 工具篇
 
 
-## 2017-07-04  一家小龙虾餐厅面对的五种竞争作用力
+## 2017-07-09  你喜欢倒钟型行业，还是尖刀型行业？
+概念：正态分布 & 幂律分布
+“边际交付时间” 越高的行业，越是分散市场，符合正态分布：赚大钱的人少，亏大钱的也少，大部分人都趋向赚取平均利润。
+倒钟型的 “正态分布”，也就是趋向中间；和尖刀型的 “幂律分布”，也就是趋向极端，统治了绝大多数商业世界的形态。
+
+
+## 2017-07-08  如何用同样的时间，换取更多的价值
+每个人都是自己的CEO。过去，我们服务于一家 “有限责任” 公司，未来我们都要经营 “自己” 这家无限责任公司。
+在未来的世界，我们与整个世界只有一种关系：合作关系。
+与老板合作，与下属合作，与客户合作，与整个世界合作。
+可是，我们拿什么来与他们合作呢？我们拿什么给这个世界，才能从这个世界换回我们想要的价值呢？
+是体力吗？是努力吗？还是智力呢？都不是。“自己” 这家无限责任公司拥有的唯一资产，我们能用来与这个世界交换的唯一的东西，就是 “时间”。
+人与人的差别，就在于同样给你一生的时间，你能换回什么。有人什么都没换回，有人换回了几乎整个世界。
+
+时间价值 =  专业 x 效率 x 杠杆。
+
+
+## 2017-07-06  通用电气矩阵：打不赢你，那我就怼死你
+概念：通用电气矩阵
+在 简单粗暴的波士顿矩阵的基础上，通用电气公司开发了一个新的业务组合分析工具：通用电气矩阵，并对波士顿矩阵，做了两个重大的“改变”（我不想用“改善”这个词，因为波士顿咨询的创始人布鲁斯先生未必同意）。
+第一，用 “竞争实力” 代替了 “相对市场份额” 作为横轴；用 “行业吸引力” 代替了 “市场增长率” 作为纵轴。
+竞争实力，是包括了相对市场份额、市场增长率、买方增长率、产品差别化、生产技术、生产能力、管理水平等等这些指标的综合指标。
+行业吸引力，是包括了产业增长率、市场价格、市场规模、获利能力、市场结构、竞争结构、技术及社会政治因素的综合指标。
+
+
+## 2017-07-05  SCQA 架构：你不是没有重点，你是没有结构
+概念：SCAQ
+麦肯锡咨询顾问芭芭拉·明托是一位神人。她在《金字塔原理》这本书中，除了提出 MECE 法则之外，还提出了一个“结构化表达”工具：SCQA 架构。
+SCQA 是四个英文单词的缩写：
+S，即情境（Situation）；
+C，即冲突（Complication）；
+Q，即问题（Question）；
+A，即答案（Answer）。
+
+
+## 2017-07-04  波士顿矩阵：你的公司有现金牛、明星、问题，和瘦狗吗？
+概念：波士顿矩阵
+波士顿咨询的创立者布鲁斯用 “相对市场份额” 作横轴，“市场增长率” 作纵轴，画了一个“二维四象限矩阵图”，把公司的业务组合，分为现金牛业务、明星业务、问题业务，和瘦狗业务。
+
+
+## 2017-07-03  一家小龙虾餐厅面对的五种竞争作用力
 概念：波特五力模型
-1979年，年仅32岁的迈克尔·波特提出，每家企业都受“直接竞争对手、顾客、供应商、潜在新进公司和替代性产品”这五个“竞争作用力”的影响。
+1979年，年仅32岁的迈克尔·波特提出，每家企业都受 “直接竞争对手、顾客、供应商、潜在新进公司和替代性产品” 这五个 “竞争作用力” 的影响。
 
 
-## 2017-07-03  透过结构看世界
-概念：MECE法则
-MECE法则，是麦肯锡咨询顾问芭芭拉·明托在《金字塔原理》中提出的一个思考工具，它是 Mutually Exclusive Collectively Exhaustive 的缩写，意思是“相互独立，完全穷尽”，也常被称为“不重叠，不遗漏”。
+## 2017-07-02  透过结构看世界
+概念：MECE 法则
+MECE 法则，是麦肯锡咨询顾问芭芭拉·明托在《金字塔原理》中提出的一个思考工具，它是 Mutually Exclusive Collectively Exhaustive 的缩写，意思是 “相互独立，完全穷尽”，也常被称为 “不重叠，不遗漏”。
 
 
 --------------------------------------------------------------------------------
