--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,19 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-07  爱情敢死队
+故事：印度种姓制度，桑杰·萨赫德夫挺身而出，在2010年7月7日成立了“爱情敢死队”。
+
+印度有一个根深蒂固的社会制度，就是种姓制度。这个制度的源起是两千六百多年前，雅利安人入侵、征服了印度，统治者为方便统治，建立种姓制度。
+
+把人分成四个阶级：
+第一级是婆罗门，他们的工作是司祭、教授经典，像中国周朝的礼官。他们不用交税、不可处罚、不可杀害。
+第二级是刹帝利，他们可以当战士、从政，是享有军政大权的实际统治者，负责保护婆罗门，但没有宗教权，因为政、教分离。
+第三级是吠舍，是农人、牧人、商人等生产者。
+第四级是首陀罗，他们是没有自由的奴仆。
+还有一种人是在四级之外，叫“贱民”。他们不配分级，不准受教育、穿鞋，走路时连影子都不准和“有级别”的人的影子重叠，否则就犯了玷污罪。他们完全没有地位，随便被人杀来打去。
+
+
 ## 2017-06-24  团结分裂的强力胶
 改变，要有改变的心、改变的勇气、改变的毅力，还有改变的方法。
 
