--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,21 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-08  一生必须去的十大博物馆（上）
+美国《国家地理》杂志评选出的全球十大博物馆
+
+  1. 美国首都华盛顿的史密森尼博物院
+  2. 法国巴黎的卢浮宫
+  3. 希腊雅典的卫城博物馆
+  4. 俄罗斯圣彼得堡的艾尔米塔什博物馆（冬宫）
+  5. 伦敦大英博物馆
+  6. 西班牙马德里普拉多博物馆
+  7. 纽约大都会博物馆
+  8. 罗马中心的梵蒂冈博物馆
+  9. 佛罗伦萨的乌菲兹博物馆
+  10. 荷兰阿姆斯特丹的国家博物馆
+
+
 ## 2017-06-26  过度解读：英国靠老处女称霸世界
 那么什么是好的思维方式，什么是有问题的呢？虽然在不同事情上思维方式的好坏可能标准不一，难以用几句话简单讲清楚，但是好的思维方式都有一个共同点，就是“以正合，以奇胜”。
 这句话出自《孙子兵法》，它的意思是排兵要以堂堂正正之师正规地交战，最后靠多余的军队取胜。这里面“奇”字读jī 不读qí，意思是“多余的”，在军队里，可以理解成预备队。以奇胜，并非出奇制胜的意思，而是说最后以机动兵力获胜。唐朝名将李靖在《唐太宗李靖问对》里对这两句话含义有比较好的诠释。
