--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,12 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-06  怎样 “不” 集中注意力
+注意力需要“养”。这使我想起古人说的所谓“闭目养神” —— 也许注意力就是这个“神”。
+如果查看一下你的电脑的运行情况，你会发现，只要不是正在做什么特别大的计算，电脑的 CPU 并不是满负荷运转 —— 可能 90% 以上的计算能力都处在闲置状态。
+这个闲置状态的概念，也可以类比于人脑。让你算一道题，做一件需要集中注意力的事情，你会感到有点累，这就是大脑处在某种任务状态。如果当前没有任何任务，什么事情都不用做，就可以认为大脑处在闲置状态 —— 这就是 “默认模式网络”。
+
+
 ## 2017-07-05  满足感管理
 多巴胺是大脑对你这个行为的奖励！感受到多巴胺，你就会感觉特别兴奋、刺激和愉悦。大脑是用多巴胺告诉你，下次还要做这样的事。
 
