--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,16 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-10  为什么你在关键时刻总是选错？
+可 Ray Dalio 的这本书给我们这些普通人设定了一个很好的起点，他帮我们总结了制定原则的 “基本原则”：
+这个原则既然这么重要，那它意味着什么？
+
+  - 如果我坚守这个原则的话，有什么事情是我绝对不能做的？有什么事情是我必须做的，不得不做的？
+  - 在我坚守这个原则的过程中，遇到的最大阻力是什么？我是如何克服那些阻力的？
+  - 在我坚守这个原则的过程中，我学到了什么？
+  - 在长期坚守这个原则的过程中，我吃了哪些亏，得了哪些便宜，总体上的得失如何？
+
+
 ## 2017-07-03  人生的终极问题到底是什么？
 买到可维持长期成长率的可增值资产之后，一直握着 —— 不动最重要。
 在“教育”或者“学习”这件事儿里，什么最重要？最终，环境比老师重要，你自己比环境还重要
