Adds reading notes of columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -13,6 +13,47 @@
 # 工具篇
 
 
+## 2017-07-16  纳什均衡：明明可以“共赢”，为什么他们“损人不利己”？
+概念：纳什均衡
+什么是“纳什均衡”？简单来说，纳什均衡就是一种博弈的稳定结果，谁单方改变策略，谁就会损失。
+看不见的手，未必会把自私的力量，导向社会福利最大化。自私，可能会导致 “好的纳什均衡”，也可能会导致 “坏的纳什均衡”，关键是 “制度设计”。
+
+
+## 2017-07-13  商业模式画布：商业模式就是 “你怎么挣钱” 吗？
+概念：商业模式画布
+商业模式作为一个广泛使用的概念，每个人都有自己的定义。
+但是，《商业模式新生代》的作者，亚历山大·奥斯特瓦德，提出了一套叫 “商业模式画布” 的工具，把设计和表述商业模式，变得简单、高效。
+这套商业模式画布包括：
+4个视角：为谁提供，提供什么，如何提供，和如何赚钱；
+9个模块：客户细分，价值主张，渠道通道，客户关系，收入来源，核心资源，关键业务，重要合作，和 成本结构。
+
+
+## 2017-07-12  SWOT分析：如何用科学的方法，追到女神
+概念：SWOT
+SWOT 分析，是 20 世纪 80 年代初，最早由美国旧金山大学的管理学教授韦里克提出的。
+“S-W-O-T” 这四个字母，代表Strength（优势）、Weakness（劣势）、Opportunity（机会）、和Threat（威胁）。
+
+
+## 2017-07-11  平衡计分卡：你想要鹅下蛋，还是吃鹅肉？
+概念：平衡计分卡
+就是在 “财务，客户，过程，创新与学习” 四个维度分别设定指标，平衡管理的一套战略工具。
+平衡计分卡，用 “共赢” 指标来平衡外部与内部；用 “因果” 指标来平衡过程与结果；用 “远近” 指标来平衡短期与长期，帮助CEO成为一个真正的思考者和执行者。
+
+
+## 2017-07-10  PEST 模型：趴下来仰视微观之前，先站起来俯视宏观
+概念：PEST
+运用：PEST 模型的四个角度
+
+第一，政治/法律。
+俯视政治/法律的角度包括：环保制度，税收政策，国际贸易章程与限制，合同法，劳动法，消费者权益保护法，政府组织/态度，竞争规则，政治稳定性，安全规定等等。
+第二，经济。
+俯视经济的角度包括：经济增长，利率与货币政策，政府开支，失业政策，税收，汇率，通货膨胀率，商业周期的所处阶段，消费者信心等等。
+第三，社会文化。
+俯视社会文化的角度包括：收入分布与生活水平，社会福利与安全感，人口结构与趋势，劳动力供需关系，企业家精神，潮流与风尚，消费升级，大健康，新生代生活态度等等。
+第四，技术。
+俯视技术的角度包括：新能源，互联网，移动互联网，大数据，机器人，人工智能，产业技术，技术采用生命周期等等。
+
+
 ## 2017-07-09  你喜欢倒钟型行业，还是尖刀型行业？
 概念：正态分布 & 幂律分布
 “边际交付时间” 越高的行业，越是分散市场，符合正态分布：赚大钱的人少，亏大钱的也少，大部分人都趋向赚取平均利润。
