--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,10 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-14  国民特性（4）—— 矛盾的法国人
+我问法国人他们是如何理解优雅的，他们有的人给我的回答非常有启发意义：优雅就是对距离感的准确把握，也就是说既要给别人留出空间，又不要太疏远怠慢别人。
+
+
 ## 2017-07-08  一生必须去的十大博物馆（上）
 美国《国家地理》杂志评选出的全球十大博物馆
 
