--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,21 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-14  锻炼的本质是对身体的适度打击
+“反脆弱”，是你打击它，它不但没有坏，而且还变得更强壮了。
+
+人的细胞中有一种分子叫 “自由基”。这其实就是普通分子，但是少了一个电子。因为少一个电子，自由基就会吸引它周围其他分子的电子。
+而其他分子被自由基剥夺一个电子之后，又想去找别的分子要一个电子。这样一个传一个，就把很多分子都传染了。
+链式反应发展下去，就会导致整个细胞出问题。太多细胞出问题，人就会得病。这就是氧化应激。
+所以自由基对身体有害。但自由基是不可避免的，我们的新陈代谢系统会随时产生自由基。
+
+锻炼的时候，你会消耗更多的氧气，你的新陈代谢会加快，你身上的自由基就会增加。
+自由基增加本来是不好的，但人体是个反脆弱系统 —— 突然增多的自由基，会激发你的身体対抗性地增加抗氧化剂。
+结果你多生产出来的抗氧化剂比多出来的自由基还要多。所以锻炼改善了抗氧化剂和自由基的平衡，减轻了氧化应激。
+
+有实验表明，每次跑四十五分钟，每周跑三次，坚持六个月，你的端粒酶的活性就能提高两倍，这是一个非常显著的效果。
+
+
 ## 2017-07-06  怎样 “不” 集中注意力
 注意力需要“养”。这使我想起古人说的所谓“闭目养神” —— 也许注意力就是这个“神”。
 如果查看一下你的电脑的运行情况，你会发现，只要不是正在做什么特别大的计算，电脑的 CPU 并不是满负荷运转 —— 可能 90% 以上的计算能力都处在闲置状态。
