--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -14,6 +14,8 @@
   - 在我坚守这个原则的过程中，我学到了什么？
   - 在长期坚守这个原则的过程中，我吃了哪些亏，得了哪些便宜，总体上的得失如何？
 
+多数事情都会有一个修正的机制隐含在里面。程序运行错误的时候，系统会报错；考试不及格，会有补考的机会；婚姻中如果出现了不可弥补的错误，离婚就是终极的纠错机制。解放出两个不合适的人，再依照各自的原则寻找合适的伴侣，可能是犯错之后最佳的解决方法。
+
 
 ## 2017-07-03  人生的终极问题到底是什么？
 买到可维持长期成长率的可增值资产之后，一直握着 —— 不动最重要。
