--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-16  推动摇篮的手在统治世界
+故事：珍·古道尔博士，世界动物保育学家
+珍的妈妈在她的回忆录里，写到珍出生后，医生对她说的话：“这将是非常具有挑战性的试验，你会了解自己必须为另一个生命负责。而她的发展将有很大部分取决于你对她的回应。别忘了那句话：推动摇篮的手在统治世界。至少，也塑造了这个世界的未来。”这是所有做父母的人都该牢记的道理。
+
+
 ## 2017-07-07  爱情敢死队
 故事：印度种姓制度，桑杰·萨赫德夫挺身而出，在2010年7月7日成立了“爱情敢死队”。
 
