--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -108,3 +108,15 @@ In the early stage, at the seed of an idea, the bet is largely based on the qual
 ## Mike Shinoda
 It is far better for a man to go wrong in freedom than to go right in chains.
     -- Thomas Huxley
+
+## How to Earn Your Freedom
+I don't like work, but I like what is in the work -- the chance to find yourself.
+    -- Joseph Conrad _Heart of Darkness_
+
+## Peter Diamandis
+1. When you're going 10% bigger, you're competing against everybody. When you're trying to go 10 times bigger, you're there by yourself.
+2. When you are trying to go 10 times bigger, you have to start with a clean sheet of paper, and you approach the problem completely differently.
+3. When you are trying to go 10 times bigger versus 10% bigger, it's typically not 100 times harder, but the reward is 100 times more.
+
+"No" simply means begin again at one level higher.
+The faster you move, the slower time passes, the longer you live.
