Adds reading notes for columns.

--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,17 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-17  第二条腿 —— 暗处的技能
+根据德鲁克对知识型员工的要求，他还需要是一个管理者。
+具备产品经理和管理者的能力，其实就是工程师的第二条腿，没有这条腿，工程师就走不远。
+
+
+## 2017-07-16  重预测和重反应
+比如投资，重预测的人会想，下一个浪潮是什么？如果猜对了，早作打算，就有了先发优势。
+重反应的人则是不太相信自己的运气，股市涨了有涨了的应对方法，跌了有跌了的处理方式。如此而已。
+世界上很多事情其实是无法预测的，把希望寄托在正确预测上是缘木求鱼。因此，真正善于投资和办公司的人都是擅长作出正确反应的人，而不是预言家。
+
+
 ## 2017-07-14  国民特性（4）—— 矛盾的法国人
 我问法国人他们是如何理解优雅的，他们有的人给我的回答非常有启发意义：优雅就是对距离感的准确把握，也就是说既要给别人留出空间，又不要太疏远怠慢别人。
 
