--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,19 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-19  白人男性的冒险思维
+布兰：“一个人如果害怕，他还能勇敢吗？”
+奈德：“人在害怕时候的勇敢，才是真的勇敢。” 
+
+
+## 2017-07-16  压力的朋友
+汉字造字有一个规律，就是同声的字往往同意。
+以 “奴” 为声的字有怒、弩、努、驽（nú）等，都是积压产生的巨大能量。
+驽是负重的马；努是负重的人；弩是负重的弓箭；而怒，是重压下的释放。
+
+怒的原始意义是女人被抢的愤怒，也是受到压迫后愤怒的爆发，我们也知道，这样的怒气毁掉了多少英雄，而真正的英雄，是能够管理自己情绪的人。
+
+
 ## 2017-07-14  锻炼的本质是对身体的适度打击
 “反脆弱”，是你打击它，它不但没有坏，而且还变得更强壮了。
 
