--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,15 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-17  如何得到满意的好答案？
+一、只要是搜索引擎能回答的就别问别人 
+二、你要知道自己提问的目的是什么 
+三、要方便他人回答 
+
+那有没有一个相对稳妥的方法能够保证对方好回答呢？答案是：
+尽量问对方选择题。
+
+
 ## 2017-07-10  为什么你在关键时刻总是选错？
 可 Ray Dalio 的这本书给我们这些普通人设定了一个很好的起点，他帮我们总结了制定原则的 “基本原则”：
 这个原则既然这么重要，那它意味着什么？
