Adds reading notes for the book - ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -120,3 +120,9 @@ I don't like work, but I like what is in the work -- the chance to find yourself
 
 "No" simply means begin again at one level higher.
 The faster you move, the slower time passes, the longer you live.
+
+
+## How to Say "No" When It Matters Most
+Life favors the specific ask and punishes the vague wish.
+
+An investment that produces a massive financial ROI but makes me a complete nervous mess, or causes insomnia and temper tantrums for a long period of time, is NOT a good investment.
