Adds reading notes for book - ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -14,7 +14,7 @@ When I let go of what I am, I become what I might be.
 
 
 ## Part 2: Wealthy
-### Marc Andreessen
+## Marc Andreessen
 __Strong Views, Loosely Held__  
 Most people go through life and never develop strong views on things.
 What happens when the world changes? What happens when something else happens? That's where "loosely held" comes in.
@@ -32,17 +32,17 @@ __Never Audition - Own or Create a Unique Niche__
 How can I carve myself out a niche that only I have?
 > 故事：为自己创造独一无二的位置
 
-### Derek Sivers
+## Derek Sivers
 Because most of us say yes to too much stuff, and then, we let these little, mediocre things fill our lives... The problem is, when that occasional, 'Oh my God, hell yeah!' things comes along, you don't have enough time to give it the attention that you should, because you've said yes to too much other little, half-ass stuff, right?
 
-### Matt Mullenweg
+## Matt Mullenweg
 It turns out that I graduated from high school, I had already used 93% of my in-person parent time. I'm now enjoying the last 5% of that time. We're in the tail end.
     -- Tim Urban _The Tail End_
 
 You asked about what we look for in candidates: clarity of writing. I think clarity of writing indicates clarity of thinking.
 > 故事：邮件交互面试
 
-### Tony Robbins
+## Tony Robbins
 Stressed is the achiever word for fear.
 
 __The Best Investment He's ever made?__  
@@ -126,3 +126,8 @@ The faster you move, the slower time passes, the longer you live.
 Life favors the specific ask and punishes the vague wish.
 
 An investment that produces a massive financial ROI but makes me a complete nervous mess, or causes insomnia and temper tantrums for a long period of time, is NOT a good investment.
+
+
+## Part 3: Wise
+## Maria Popova
+Those who work much, do not work hard. -- Henry David Thoreau
