Adds reading notes for columns.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -13,6 +13,23 @@
 # 工具篇
 
 
+## 2017-07-31  德尔菲法：70年前发明的高科技：人脑云计算
+概念：德尔菲法
+德尔菲法是一种预测方法，它是在20世纪40年代由O.赫尔姆和N.达尔克首创，经过T.J.戈尔登和兰德公司进一步发展而成的。
+古希腊有一座名城，叫德尔菲，相传城中阿波罗圣殿能预测未来。德尔菲法，因此得名。
+简单来说，德尔菲法就是“把专家的独立观点不断收敛”的预测法。
+
+
+## 2017-07-27  一报还一报：用惩罚回报恶行，用善行回报善行
+什么是 “一报还一报”？一报还一报的基本逻辑是：第一回合采取合作策略，然后每一回合都采取上一回合对手的策略。
+
+
+## 2017-07-19  公地悲剧：三根救命毫毛，为何只给孙悟空？
+这种“公地悲剧”其实随处可见，比如过度海洋捕捞，偷偷污染排放等等，都是因为海洋、天空是“公地”，“我不捕捞，你也会捕捞”的这种“捞一把心态”，把保护环境变成了“公地悲剧”。
+公地悲剧，是一个典型的“坏的纳什均衡”。
+那怎么才能克服呢？第一，可以把公共资源私有化，破坏纳什均衡；第二，对无法私有化的资源，加强管制。
+
+
 ## 2017-07-16  纳什均衡：明明可以“共赢”，为什么他们“损人不利己”？
 概念：纳什均衡
 什么是“纳什均衡”？简单来说，纳什均衡就是一种博弈的稳定结果，谁单方改变策略，谁就会损失。
