--- a/note/...column_世界名刊速读.md
+++ b/note/...column_世界名刊速读.md
@@ -5,7 +5,30 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-24  《1843》| 为什么人在网上更自恋？
+character 强调的是，一个人面对生活中重大问题时态度，所以电影、小说里的角色都叫 character，因为故事就是角色对于不同问题的选择。
+personality 指的是，一个人在为人处事方面与众不同、让人印象深刻的特质。
+
+社交网络无法创造你原来没有的性格特征，它只是把你性格中本来就有的东西，发掘并且放大了，
+而我们在面对一个人的时候会更加坦诚并且克制，但面对很多人的时候会显得更自恋，会展现出 the vanity of crowds（群体虚荣心）
+
+个性就是你在其他人面前表现出的样子，受众的多少决定了我们的身份和表达方式。
+Personality is who we are in front of other people. Our audience is our identity.
+
+
 ## 2017-07-17  《哈佛商业评论》| 压力来源于内部对外界的反应
 一个社会心理学上的规律，叫做基本归因错误。
 基本归因错误指的是我们会根据别人的行为来评判别人，并且最终会把这些行为归咎于他们的个人因素，而我们在评判自己的时候，却会按照我们自己的意图来判断，有一点双重标准的意思。
 举个例子，比如我们会认为别人的失败，是因为他们不够努力，而自己的失败就是因为倒霉，是外部环境造成的。
+
+
+## 2017-06-15  《商业与策略》| 训练大脑，成为更好决策者
+所谓赫布理论就是，总用相同的思考方式做决策，在大脑中激发的神经元也总是相同的。长此以往，大脑就会构成一条神经路径，只要遇到相关决策问题，就自动用这条路径来解决。
+赫布理论的核心是，让脑部神经元连接起来，协同工作。大脑中的神经元如果总是被同时激发，那么这些神经元就会连接在一起。也就是所谓养成习惯。
+
+
+## 2017-06-08  《大西洋月刊》| 沃尔玛：哄着美国人开始存钱
+诺贝尔经济学奖获得者丹尼尔·卡尼曼说过，彩票就好比是一种“穷人税”，换来的是低收入人群对理想生活大胆想象的权利。
+这是一种穷人的思维模式。所谓穷人花钱，中产借钱，富人让钱生钱。
+富人即使有全款买房的能力，也会选择分期，因为要用手头的钱做投资赚更多的钱；
+中产阶级敢贷款，因为对自己的还款能力有信心；而穷人的思维是先维持不挨饿，没心思考虑将来的事。
