--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,21 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-25  对话班超：勇气和智慧
+苏轼在《留侯论》中讲 “匹夫见辱，拔剑而起，挺身而斗，此不足为勇也。天下有大勇者，卒然临之而不惊，无故加之而不怒”。
+所谓勇敢应该是不怕危险和困难，果敢行动，办成别人不能干也不敢干的事情。
+
+
+## 2017-07-20  专业和业余的区别
+名医和一般的好医生并不在于前者能治好后者治不好的病（而且根据他们的观点，真遇上了绝症谁也没办法），而在于前者的治疗效果（预后）是可以预期的，是稳定的，因此病人找他们放心。
+
+首先，好的专业人士要在任何情况下为工作本身着想，他们不会因为看到患者是个瘾君子，态度就和对待一个社会名士有所不同，也不会因为最近自己的一些家庭变故就影响自己的工作。
+其次，专业素养意味着遵守流程和行业规范。
+第三点，是否有专业素养体现在是否愿意花工夫寻找更好的答案，而不是交差了事。
+第四点，专业人士常常有完整的领域知识，或者说掌握了成体系的知识，而业余人士常常只掌握了一些知识点。前者因此具有分析问题，解决未知问题的能力，后者常常只能应用所知的一些知识。
+最后，也是非常重要的一点，就是具有专业素养的人是在动态中进步的。无论是当工程师、医生还是会计师，一流的从业者都是不断学习和进步的。
+
+
 ## 2017-07-17  第二条腿 —— 暗处的技能
 根据德鲁克对知识型员工的要求，他还需要是一个管理者。
 具备产品经理和管理者的能力，其实就是工程师的第二条腿，没有这条腿，工程师就走不远。
