--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,28 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-27  礼崩乐坏文化战
+你把原本上层社会的东西给故意平民化处理一下，往往能赚到很多钱。
+比如在家里煮纯正的咖啡，比较麻烦，原本算是高级的享受。
+但是既然中产阶级爱附庸风雅，就有人发明了简易的咖啡机，让普通家庭也能弄出来不正宗、但是差不多味道的咖啡，结果大受欢迎。
+那如此说来，也许简易咖啡反而定义了咖啡的味道，底层文化取胜了。
+类似的例子则是我们前面在《现代人怎么都不穿正装了？》这期说过的T恤衫牛仔裤取代正装。
+
+我认为文化其实包含三个部分：技能文化、智识文化、品位文化。
+技能文化，就是你多年勤学苦练掌握的看家本领，是能参与社会分工和竞争的一技之长。
+智识文化，就是你的世界观、人生观和价值观，是你的智慧和见识。
+品位文化，就是到底是施特劳斯的 “蓝色多瑙河” 好听还是巴赫的 “平均律钢琴曲” 好听，这种熏陶出来的格调品位。
+
+
+## 2017-07-24  能从十三岁看老的品质
+人的大脑中有个区域叫 “腹侧纹状体”，这个区域负责大脑的奖励系统，能在某些情境之下给我们带来愉悦感。
+从青春期 —— 也就是差不多十三岁的时候开始 —— 腹侧纹状体给的奖励，重点偏向于社交领域。
+也就是说，从十三岁开始，我们对同辈人的重视，就超过了对父母的重视。
+
+幽默是 “温和的违反”，“酷” 则是 “对不合理的主流的一次正当的打破”。
+成年人心目中 “酷” 的概念应该比较强调 “正当” 这两个字，但是对十三岁的小孩来说，“酷” 的关键词是 “打破”。
+
+
 ## 2017-07-19  白人男性的冒险思维
 布兰：“一个人如果害怕，他还能勇敢吗？”
 奈德：“人在害怕时候的勇敢，才是真的勇敢。” 
