--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,18 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-07-24  执行力差的根源究竟在哪里？
+两千多年前，苏格拉底和斐德罗就讨论过这事儿，柏拉图做了记录。
+苏格拉底很聪明，他相信聪明人是不用记录的，只需要用脑子记住就可以了……
+幸亏柏拉图觉得自己笨，于是，把苏格拉底的对话都记录下来了……
+
+他们当时认为，人的灵魂有三重本质，还为此画了一个图，一个骑手，驾驭着一辆由一黑一白两匹带着翅膀的马拉着的战车。
+黑色的马代表欲望灵魂，白色的马代表意志灵魂，而那个骑手，代表理性灵魂，他要驾驭着这两匹神驹勇往直前……
+
+在心理学发展的早期，弗洛伊德把这个类比改头换面，其实就是很偷懒地换了个不一样的类比，
+说，完整的人格由三大部分组成，它们分别是本我、自我和超我……
+
+
 ## 2017-07-17  如何得到满意的好答案？
 一、只要是搜索引擎能回答的就别问别人 
 二、你要知道自己提问的目的是什么 
@@ -12,6 +24,9 @@
 
 那有没有一个相对稳妥的方法能够保证对方好回答呢？答案是：
 尽量问对方选择题。
+
+每个人需要依据自己的水平来提问，但最基本的原则是“问心无愧”。
+也就是你认为自己已经拿出了现阶段最好的问题去交换对方的答案，不论对方是否接受此次交换，你都应该对得起自己所建立的“交换原则”。
 
 
 ## 2017-07-10  为什么你在关键时刻总是选错？
