Adds reading notes for the book - ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -131,3 +131,6 @@ An investment that produces a massive financial ROI but makes me a complete nerv
 ## Part 3: Wise
 ## Maria Popova
 Those who work much, do not work hard. -- Henry David Thoreau
+
+## General Stanley McChrystal & Chris Fussell
+You should have a running list of three people that you're always watching: someone senior to you that you want to emulate, a peer who you think is better at the job than you are and who you respect, and someone subordinate who's doing the job you did -- one, two, or three years ago -- better than you did it.
