Adds reading notes for book - ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -134,3 +134,7 @@ Those who work much, do not work hard. -- Henry David Thoreau
 
 ## General Stanley McChrystal & Chris Fussell
 You should have a running list of three people that you're always watching: someone senior to you that you want to emulate, a peer who you think is better at the job than you are and who you respect, and someone subordinate who's doing the job you did -- one, two, or three years ago -- better than you did it.
+
+## Will MacAskill
+nature of the job
+It's whether the job provides a lot of variety, gives you good feedback, allows you to exercise autonomy, contributes to the wider world - Is it acutually meaningful? Is it making the world better? - and also, whether it allows you to exercise a skill that you've developed.
