Adds reading notes for book - ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -138,3 +138,7 @@ You should have a running list of three people that you're always watching: some
 ## Will MacAskill
 nature of the job
 It's whether the job provides a lot of variety, gives you good feedback, allows you to exercise autonomy, contributes to the wider world - Is it acutually meaningful? Is it making the world better? - and also, whether it allows you to exercise a skill that you've developed.
+
+## Kevin Kelly
+Write to get ideas, not to express them.
+What I discovered, which is what many writers discover, is that I write in order to think.
