Adds reading notes for the book - ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -142,3 +142,7 @@ It's whether the job provides a lot of variety, gives you good feedback, allows 
 ## Kevin Kelly
 Write to get ideas, not to express them.
 What I discovered, which is what many writers discover, is that I write in order to think.
+
+## Bryan Callen
+There is great security in insecurity.
+We are wired and programmed to do what's safe and what's sensible.
