Adds two poems.

--- a/note/...book_古诗.md
+++ b/note/...book_古诗.md
@@ -1,4 +1,4 @@
-# 唐诗
+# 古诗
 2016-12-02
 
 ---
@@ -21,7 +21,17 @@
 夫天地者万物之逆旅也，光阴者百代之过客也。而浮生若梦，为欢几何？古人秉烛夜游，良有以也。
 况阳春召我以烟景，大块假我以文章。会桃花之芳园，序天伦之乐事。群季俊秀，皆为惠连；吾人咏歌，独惭康乐。
 幽赏未已，高谈转清。开琼筵以坐花，飞羽觞而醉月。不有佳咏，何伸雅怀？如诗不成，罚依金谷酒数。
-    -- 《春夜宴从弟桃花园序》
+    --《春夜宴从弟桃花园序》
+
+
+## 苏轼
+有如兔走鹰隼落，骏马下注千丈坡。
+断弦离柱箭脱手，飞电过隙珠翻荷。
+    --《百步洪》其一
+
+佳人未肯回秋波，幼舆欲语防飞梭。
+轻舟弄水买一笑，醉中荡桨肩相磨。
+    --《百步洪》其二
 
 
 ## 白居易
