Adds reading notes for book - ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -146,3 +146,8 @@ What I discovered, which is what many writers discover, is that I write in order
 ## Bryan Callen
 There is great security in insecurity.
 We are wired and programmed to do what's safe and what's sensible.
+
+## Paulo Coelho
+The world is changed by your example, not by your opinion.
+
+Books are not here to show how intelligent an cultivated you are. Books are out there to show your heart, to show your soul, and to tell your fans, readers: You are not alone.
