Adds reading notes for the book - ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -151,3 +151,6 @@ We are wired and programmed to do what's safe and what's sensible.
 The world is changed by your example, not by your opinion.
 
 Books are not here to show how intelligent an cultivated you are. Books are out there to show your heart, to show your soul, and to tell your fans, readers: You are not alone.
+
+## 8 Tactics for Dealing with Haters
+Robustness is when you care more about the few who like your work than the multitude who hates it(artists); fragility is when you care more about the few who hate your work than the multitude who loves it(politicians).
